Create add functional for clothes
