# src/schemes/request/add_product.go
@@ -1,8 +1,11 @@
 package request
 
 // AddProduct request scheme
-type AddProduct struct {
+type AddClothes struct {
 	Name  string
 	Count int
 	Price float64
+	Type  string
+	Color string
+	Stock string
 } // @name AddProductRequest
